Fixed missing gDNA-annotation in the report

--- a/templates/report.html
+++ b/templates/report.html
@@ -86,7 +86,7 @@
       <dt>Transcript ID:</dt>
       <dd>{{ item.transcript }}</dd>
       <dt>gDNA: </dt>
-      <dd>{{ item.cDNA }}</dd>
+      <dd>{{ item.gDNA }}</dd>
       <dt>cDNA: </dt>
       <dd>{{ item.cDNA }}</dd>
       <dt>protein: </dt>
