--- a/templates/variant_interp_modal.html
+++ b/templates/variant_interp_modal.html
@@ -37,7 +37,7 @@
                 <dd id="SIFTPrediction"></dd>
                 <dt>TASTERprediction</dt>
                 <dd id="TASTERprediction"></dd>
-                <dt>HGMD ID</dt>
+                <dt><a id="hgmdgenelink" href="" target="_blank">HGMD ID</a></dt>
                 <dd id="hgmdId"></dd>
                 <dt>HGMD pheno</dt>
                 <dd id="hgmdPhenotype"></dd>
@@ -71,8 +71,16 @@
                 <dd id="aESP"></dd>
                 <dt>espEAMAF</dt>
                 <dd id="espEAMAF"></dd>
-                <dt>Exac (all)</dt>
+                <dt><a id="exaclink" href="http://exac.broadinstitute.org/variant/" target="_blank">Exac (all)</a></dt>
                 <dd id="aExac"></dd>
+                <!-- http://exac.broadinstitute.org/variant/5-148386569-T-C
+
+                <a id="hgmdgenelink" href="https://portal.biobase-international.com/hgmd/pro/gene.php?gene=" target="_blank"></a>
+                <a id="hgmdvariantlink" href="https://portal.biobase-international.com/hgmd/pro/mut.php?accession=" target="_blank"></a>
+
+
+
+                 -->
                 <dt>exacNFEFreq</dt>
                 <dd id="exacNFEFreq"></dd>
                 <dt>Zygosity</dt>
