Div layout changes

--- a/templates/enter_variant_modal.html
+++ b/templates/enter_variant_modal.html
@@ -10,66 +10,89 @@
        <p>Fill inn variant identification and get data from Alamut</p>
        <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
         {{ form.hidden_tag() }}
+        <!-- -->
         <div class="row">
           <div class="col-sm-5">
             <fieldset class="form-group">
-             {{ form.chrom.label }}
-             {{ form.chrom(class="form-control") }}
-           </fieldset>
-         </div>
-            <div class="col-sm-5">
-            <fieldset class="form-group">
-            
-            
-             {{ form.combo.label }}
-             {{ form.combo(class="form-control") }}
-           </fieldset>
-         </div></div>
-         <div class="row">
-          <div class="col-sm-5">
-           <fieldset class="form-group">
-             {{ form.start.label }}
-             {{ form.start(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.ref.label }}
-             {{ form.ref(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.zyg.label }}
-             {{ form.zyg(class="form-control") }}
-           </fieldset>
-         </div>
+              {{ form.combo.label }}
+              {{ form.combo(class="form-control") }}
+            </fieldset>
+          </div>
+        </div>
+        <div class="row">
          <div class="col-sm-5">
-           <fieldset class="form-group">
-             {{ form.stop.label }}
-             {{ form.stop(class="form-control") }}
-           </fieldset>
-           <fieldset class="form-group">
-             {{ form.alt.label }}
-             {{ form.alt(class="form-control") }}
-           </fieldset>       
-           <fieldset class="form-group">
-             {{ form.denovo.label }}
-             {{ form.denovo(class="form-control") }}
-           </fieldset>
-         </div>
-       </div>
-       <div class="row">
-         <div class="col-sm-3">
-           <fieldset class="form-group">          
-             {{ form.submit(class="btn btn-primary") }}
-           </fieldset>
-         </form>
-       </div>
-       <div class="col-sm-2">
-         <button id="get_alamut" type="button" class="btn btn-default">Get Alamut</button>
-       </div>
-     </div>
-   </div>
-   <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-   </div>
- </div>
-</div>
-</div>
+          <fieldset class="form-group">
+            {{ form.zyg.label }}
+            {{ form.zyg(class="form-control") }}
+          </fieldset>
+        </div>
+        <div class="col-sm-5">
+          <fieldset class="form-group">
+            {{ form.denovo.label }}
+            {{ form.denovo(class="form-control") }}
+          </fieldset>
+        </div>
+      </div>
+<!-- -->
+        <hr>
+        <h4 data-toggle="collapse" href="#advanced_variant_entry" aria-expanded="false" aria-controls="advanced_entry">
+          Comprehensive entering of variants
+        </h4><hr>
+        <div class="collapse" id="advanced_variant_entry">
+          <div class="well">
+            <div class="row">
+              <div class="col-sm-4">
+                <fieldset class="form-group">
+                  {{ form.chrom.label }}
+                  {{ form.chrom(class="form-control") }}
+                </fieldset>
+              </div>
+            </div>
+              <div class="row">
+                <div class="col-sm-4">
+                  <fieldset class="form-group">
+                    {{ form.ref.label }}
+                    {{ form.ref(class="form-control") }}
+                  </fieldset>
+                </div>
+                <div class="col-sm-4">
+                  <fieldset class="form-group">
+                    {{ form.alt.label }}
+                    {{ form.alt(class="form-control") }}
+                  </fieldset>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4">
+                  <fieldset class="form-group">
+                    {{ form.start.label }}
+                    {{ form.start(class="form-control") }}
+                  </fieldset>
+                </div>
+                <div class="col-sm-4">
+                  <fieldset class="form-group">
+                    {{ form.stop.label }}
+                    {{ form.stop(class="form-control") }}
+                  </fieldset>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-3">
+              <fieldset class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
+              </fieldset>
+            </form>
+          </div>
+          <div class="col-sm-2">
+            <button id="get_alamut" type="button" class="btn btn-default">Get Alamut</button>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+  </div>
