Added a tooltip to the combobox

--- a/templates/enter_variant_modal.html
+++ b/templates/enter_variant_modal.html
@@ -18,7 +18,11 @@
               {{ form.combo(class="form-control") }}
             </fieldset>
           </div>
-        </div>
+        
+          <!-- <button type="button" class="btn btn-sm btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Howto</button>
+-->
+
+      </div>
         <div class="row">
          <div class="col-sm-5">
           <fieldset class="form-group">
