Added a hidden field and the possibility to delete variants.

--- a/templates/variant_interp_modal.html
+++ b/templates/variant_interp_modal.html
@@ -209,6 +209,7 @@
           <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
             {{ delform.hidden_tag() }}
             <fieldset class="form-group">
+              {{ hidden_variant_ID }}
               {{ delform.submit(class="btn btn-primary") }}
               </fieldset>
           </form>
