added denovo to the variant interp and report in addition to seen at MGM

--- a/templates/report.html
+++ b/templates/report.html
@@ -139,8 +139,10 @@
       <dd>{{ item.inclass }}</dd>
       <dt>Signed:</dt>
       <dd>{{ item.signed }}</dd>
-      <dt>previous</dt>
+      <dt>Seen @ MGM</dt>
       <dd>{{ item.concat|safe }}</dd>
+      <dt><i>Denovo</i> status</dt>
+      <dd>{{ item.denovo }}</dd>
     </dl>
   </div>
 </div>
