--- a/templates/variant_interp_modal.html
+++ b/templates/variant_interp_modal.html
@@ -78,8 +78,8 @@
                 <dd id="zygo"></dd>
                 <dt>Seen @ MGM</dt>
                 <dd id="mgmseen"></dd>
-                <dt>Functional studies</dt>
-                <dd id="funcStud"></dd>
+                <dt><i>Denovo</i> status</dt>
+                <dd id="denovostatus"></dd>
               </dl>
             </div>
           </div>
