--- a/templates/enter_variant_modal.html
+++ b/templates/enter_variant_modal.html
@@ -8,7 +8,7 @@
      </div>
      <div class="modal-body">
        <p>Fill inn variant identification and get data from Alamut</p>
-       <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
+       <form action="{{ url_for('showdb') }}/{{ pID }}" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <!-- -->
         <div class="row">
@@ -18,7 +18,7 @@
               {{ form.combo(class="form-control") }}
             </fieldset>
           </div>
-  
+
       </div>
         <div class="row">
          <div class="col-sm-5">
