--- a/templates/variant_interp_modal.html
+++ b/templates/variant_interp_modal.html
@@ -80,6 +80,15 @@
                 <dd id="mgmseen"></dd>
                 <dt><i>Denovo</i> status</dt>
                 <dd id="denovostatus"></dd>
+                <!-- -->
+                <dt id="ppt">polyphen</dt>
+                <dd id="pp">Test</dd>
+                <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
+                  {{ polyphenform.hidden_tag() }}
+                {{ polyphenform.polyphen(onchange="polyform();", style="display: none") }} {{ polyphenform.submit(style="display: none") }}
+                </form>
+                <!-- -->
+
               </dl>
             </div>
           </div>
