added polyphen field to the report.

--- a/templates/report.html
+++ b/templates/report.html
@@ -143,6 +143,8 @@
       <dd>{{ item.concat|safe }}</dd>
       <dt><i>Denovo</i> status</dt>
       <dd>{{ item.denovo }}</dd>
+      <dt>Polyphen</dt>
+      <dd>Kommer!</dd>
     </dl>
   </div>
 </div>
